Adding Description of class

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
 <body>
   <main>
-    <h1>Welcome, Josephine</h1>
+    <h1>Welcome, Josephine Diva</h1>
     <h2>
       This is your schedule for your first semester in third year!
+    </h2>
+    <h2>
       Feel free to explore ...
     </h2>
   </main>
-
+  
   <div class="schedule">
     <table>
       <tr>
@@ -93,9 +95,9 @@
       <tr>
         <td>JUMAT</td>
         <td></td>
-        <td>Citra AP : LKD B</td>
-        <td>Citra AP : LKD B</td>
-        <td>Citra AP : LKD B</td>
+        <td>Pem. Citra AP : LKD B</td>
+        <td>Pem. Citra AP : LKD B</td>
+        <td>Pem. Citra AP : LKD B</td>
         <td></td>
         <td></td>
         <td></td>
@@ -105,6 +107,12 @@
         <td></td>
       </tr>
     </table>
+    <p>ASA = Analisis dan Strategi Algoritma</p>
+    <p>RPL = Rekayasa Perangkat Lunak</p>
+    <p>Pem. Platform = Pemrograman Berbasis Platform</p>
+    <p>Pola = Pengenalan Pola</p>
+    <p>PI = Pemerolehan Informasi</p> 
+    <p>Pem. Citra = Pemrosesan Citra</p>
   </div>
 </body>
 
